--- a/assets/sass/base/reset.scss
+++ b/assets/sass/base/reset.scss
@@ -14,6 +14,9 @@
     p, a {
       color: white;
     }
+    h6 {
+      color: white;
+    }
 
   }
   body {
@@ -54,6 +57,7 @@
       font-family: "Plaster", cursive;
       margin: 0;
       font-size: 5rem;
+      color: #6B6B6B;
     }
   }
   
