--- a/assets/sass/base/reset.scss
+++ b/assets/sass/base/reset.scss
@@ -23,7 +23,7 @@
     margin: 0;
     padding: 0;
     font-size: 1.6rem;
-    color: #6B6B6B;
+    color: #492626;
     overflow-x: hidden;
   
     h1 {
@@ -57,7 +57,7 @@
       font-family: "Plaster", cursive;
       margin: 0;
       font-size: 5rem;
-      color: #6B6B6B;
+      color: #492626;
     }
   }
   
