responsiv fix started

--- a/assets/sass/layout/home.scss
+++ b/assets/sass/layout/home.scss
@@ -218,6 +218,7 @@
         top: 65%;
         left: 30%;
         transform: translate(-30%);
+        margin-top: 15rem;
         .beekeperLogo {
           background-color: #d6d1f3;
           border-radius: 50%;
@@ -252,6 +253,7 @@
         align-items: center;
         top: 100%;
         left: 15%;
+        margin-top: 25rem;
         transform: translate(-50%);
         .bigbug {
           .bug {
